# pico-ky-040

./: .gitignore  CMakeLists.txt  README.md  main.c
examples/: BasicExample.c
ky-040-library/: ky-040.c  ky-040.h
